<resources>
    <string name="app_name">Calculator</string>
    <string name="borrar">C</string>
    <string name="paréntesisizquierdo">(</string>
    <string name="paréntesisderecho">)</string>
    <string name="slash">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplicar">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="restar">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="suma">+</string>
    <string name="_0">0</string>
    <string name="punto">.</string>
    <string name="moverizquierda">◄</string>
    <string name="resultado">=</string>
    <string name="numero_1">Numero 1</string>
    <string name="numero_2">Numero 2</string>
</resources>